Use Java 11 toList